--- a/dotfiles/tasks/main.yml
+++ b/dotfiles/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: ユーザ設定ファイルをチェックアウト
+- name: checkout dotfiles
   git:
     repo: https://github.com/tateishi/dotfiles.git
     dest: ~/.dotfiles
@@ -10,7 +10,7 @@
   loop:
     - path: ~/.config/git
 
-- name: 設定ファイルをリンク
+- name: link config
   file:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
@@ -23,7 +23,7 @@
     - src:  ~/.dotfiles/ledger/ledgerrc
       dest: ~/.ledgerrc
 
-- name: bashrc に追加
+- name: add bash script to bashrc
   blockinfile:
     dest: ~/.bashrc
     block: |
