--- a/python/defaults/main.yml
+++ b/python/defaults/main.yml
@@ -4,9 +4,13 @@ packages_bionic:
   - python3-distutils
   - python3-dev
 
-
-
 packages_focal:
+  - python3
+  - python3-pip
+  - python3-distutils
+  - python3-dev
+
+packages_hirsute:
   - python3
   - python3-pip
   - python3-distutils
