--- a/python/defaults/main.yml
+++ b/python/defaults/main.yml
@@ -15,3 +15,9 @@ packages_hirsute:
   - python3-pip
   - python3-distutils
   - python3-dev
+
+packages_impish:
+  - python3
+  - python3-pip
+  - python3-distutils
+  - python3-dev
