--- a/python/defaults/main.yml
+++ b/python/defaults/main.yml
@@ -1,3 +1,5 @@
+repository: ppa:deadsnakes/ppa
+
 packages_bionic:
   - python3
   - python3-pip
@@ -9,6 +11,10 @@ packages_focal:
   - python3-pip
   - python3-distutils
   - python3-dev
+  - python3.7
+  - python3.9
+  - python3.10
+  - python3.11
 
 packages_hirsute:
   - python3
