--- a/python/tasks/main.yml
+++ b/python/tasks/main.yml
@@ -1,3 +1,13 @@
+- name: prerequisite
+  become: yes
+  apt:
+    name: software-properties-common
+
+- name: add deadsnakes
+  become: yes
+  apt_repository:
+    repo: "{{ repository }}"
+
 - name: install python for bionic
   become: yes
   apt:
@@ -8,7 +18,7 @@
   become: yes
   apt:
     name: "{{ packages_focal }}"
-  when: ansible_facts["distribution_release"] == "focal"
+  when: ansible_distribution_release == "focal"
 
 - name: install python for hirsute
   become: yes
