--- a/python/defaults/main.yml
+++ b/python/defaults/main.yml
@@ -6,11 +6,20 @@ packages_bionic:
   - python3-distutils
   - python3-dev
 
+packages_bionic_ex:
+  - python3.7
+  - python3.8
+  - python3.9
+  - python3.10
+  - python3.11
+
 packages_focal:
   - python3
   - python3-pip
   - python3-distutils
   - python3-dev
+
+packages_focal_ex:
   - python3.7
   - python3.9
   - python3.10
