--- a/python/defaults/main.yml
+++ b/python/defaults/main.yml
@@ -36,3 +36,9 @@ packages_impish:
   - python3-pip
   - python3-distutils
   - python3-dev
+
+packages_jammy:
+  - python3
+  - python3-pip
+  - python3-distutils
+  - python3-dev
