--- a/emacs/tasks/main.yml
+++ b/emacs/tasks/main.yml
@@ -4,20 +4,10 @@
     name: emacs
     classic: true
 
-- name: make .config/emacs directory
-  file:
-    path: ~/.config/emacs
-    state: directory
-
-- name: clone emacs-cask setting
-  git:
-    repo: https://github.com/tateishi/emacs-cask.git
-    dest: ~/.config/emacs/cask
-
 - name: clone chemacs2
   git:
     repo: https://github.com/plexus/chemacs2.git
-    dest: ~/.emacs.d
+    dest: ~/.config/emacs
     version: 30a2
 
 - name: make .config/chemacs directory
@@ -29,6 +19,11 @@
   copy:
     src: profiles.el
     dest: ~/.config/chemacs/profiles.el
+
+- name: clone emacs-cask setting
+  git:
+    repo: https://github.com/tateishi/emacs-cask.git
+    dest: ~/.config/chemacs/cask
 
 - name: clone cask
   git:
