change rsyslog filename pattern

--- a/rsyslog/files/15-customize.conf
+++ b/rsyslog/files/15-customize.conf
@@ -1,9 +1,7 @@
 # log every host in its own directory
-$template RemoteHost,"/var/log/hosts/syslog-%HOSTNAME%"
+$template RemoteHost,"/var/log/hosts/syslog-%hostname%.log"
 
 
 # Remote Logging
-#*.* ?RemoteHost
-:fromhost-ip,!isequal,"127.0.0.1"  ?RemoteHost
+:fromhost-ip, !isequal, "127.0.0.1"  ?RemoteHost
 & stop
-
