rsyslog-remote defaults 変更

--- a/rsyslog-remote/defaults/main.yml
+++ b/rsyslog-remote/defaults/main.yml
@@ -1,13 +1,5 @@
-rsyslog_proto: "udp"
-rsyslog_host: "rsyslog"
-rsyslog_port: "514"
-
 rsyslog:
   - pattern: "*.*"
     proto: "udp"
-    host: "rsyslog"
+    host: "syslog"
     port: "514"
-  - pattern: "*.*"
-    proto: "tcp"
-    host: "lxd02"
-    port: "5140"
