--- a/packages/tasks/main.yml
+++ b/packages/tasks/main.yml
@@ -1,3 +1,7 @@
 - name: install packages for debian
   include_tasks: debian.yml
   when: ansible_facts['os_family'] == 'Debian'
+
+- name: install packages for redhat
+  include_tasks: redhat.yml
+  when: ansible_facts['os_family'] == 'RedHat'
