--- a/packages/tasks/jammy.yml
+++ b/packages/tasks/jammy.yml
@@ -9,7 +9,7 @@
   apt:
     name: "{{ item }}"
     update_cache: yes
-  loop: "{{ debian_apt_packages }}"
+  loop: "{{ jammy_apt_packages }}"
 
 - name: install common packages from snap
   become: true
