dotfiles-chezmoi のインストール条件を変更
.config/chezmoi/chezmoistate.boltdb の存在で実行を判断する。

--- a/dotfiles-chezmoi/tasks/main.yml
+++ b/dotfiles-chezmoi/tasks/main.yml
@@ -9,3 +9,5 @@
 
 - name: download repo and apply
   command: "chezmoi init --apply --verbose {{ chezmoi_repo }}"
+  args:
+    creates: ~/.config/chezmoi/chezmoistate.boltdb
