add poetry install guard.

--- a/py-poetry/tasks/main.yml
+++ b/py-poetry/tasks/main.yml
@@ -1,3 +1,5 @@
 - name: py-poetry
   shell: >
     curl -sSL https://install.python-poetry.org | python3 -
+  args:
+    creates: "{{ ansible_env.HOME }}/.local/bin/poetry"
