--- a/packages/defaults/main.yml
+++ b/packages/defaults/main.yml
@@ -1,66 +1,1 @@
-focal_apt_packages:
-  - bash-completion
-  - bat
-  - git
-  - htop
-  - jq
-  - mc
-  - screen
-  - silversearcher-ag
-  - tig
-  - tmux
-  - translate-shell
-  - tree
-
-jammy_apt_packages:
-  - bash-completion
-  - bat
-  - exa
-  - git
-  - htop
-  - jq
-  - mc
-  - screen
-  - silversearcher-ag
-  - tig
-  - tmux
-  - translate-shell
-  - tree
-
-noble_apt_packages:
-  - bash-completion
-  - bat
-  - git
-  - htop
-  - jq
-  - mc
-  - screen
-  - silversearcher-ag
-  - tig
-  - tmux
-  - translate-shell
-  - tree
-
-zorinos_apt_packages:
-  - bash-completion
-  - bat
-  - git
-  - htop
-  - jq
-  - mc
-  - screen
-  - silversearcher-ag
-  - tig
-  - tmux
-  - translate-shell
-  - tree
-
-debian_snap:
-  - bottom
-
-redhat_dnf_packages:
-  - bash-completion
-  - git
-  - mc
-  - tmux
-  - tree
+install_packages: []
