--- a/dotfiles-chezmoi/defaults/main.yml
+++ b/dotfiles-chezmoi/defaults/main.yml
@@ -1,3 +1,1 @@
----
-# defaults file for dotfiles-chezmoi
-chezmoi_repo: https://github.com/tateishi/dotfiles
+chezmoi_repo: "https://github.com/tateishi/dotfiles"
