--- a/python/defaults/main.yml
+++ b/python/defaults/main.yml
@@ -46,3 +46,9 @@ packages_jammy:
   - python3-pip
   - python3-distutils
   - python3-dev
+
+packages_noble:
+  - python3
+  - python3-pip
+  - python3-dev
+  - pipx
