--- a/emacs/defaults/main.yml
+++ b/emacs/defaults/main.yml
@@ -1,5 +1,5 @@
 chemacs_url: "https://github.com/plexus/chemacs2"
-chemacs_version: "30a2"
+chemacs_version: "main"
 chemacs_dest_dir: "~/.config/emacs"
 chemacs_profile_dir: "~/.config/chemacs"
 emacs_config_url: "https://github.com/tateishi/emacs-config"
